attempting to fix errors

--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -27,6 +27,6 @@
 
 {{> comments post.comments}}
 
-<script src="/public/js/edit.js"></script>
-<script src="/public/js/delete.js"></script>
-<script src="/public/js/comment.js"></script>
+<script src="/js/edit.js"></script>
+<script src="/js/delete.js"></script>
+<script src="/js/comment.js"></script>
