--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale = 1.0">
     <title> Bots and Bits Computer Lounge </title>
-    <link rel="stylesheet" href="/public/css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
-
+<body>
 <div class="wrapper">
     <header>
         <h1 class="has-text-black px-3 py-3 has-text-weight-bold"></h1>
@@ -49,7 +49,7 @@
 </div>
 
 {{#if loggedIn}}
-<script src="/public/js/logout.js"></script>
+<script src="/js/logout.js"></script>
 {{/if}}
 </body>
 
