--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -14,5 +14,5 @@
 {{> comment post.comments}}
 
 {{#if loggedIn}}
-<script src="/public/js/comment.js"></script>
+<script src="/js/comment.js"></script>
 {{/if}}
